@@ -1,6 +1,6 @@
 Package: universalmotif
 Title: Import, Modify, and Export Motifs with R
-Version: 1.1.19
+Version: 1.1.20
 Authors@R: person(c("Benjamin", "Jean-Marie"), "Tremblay", role = c("aut",
     "cre"), email = "b2tremblay@uwaterloo.ca")
 URL: https://github.com/bjmt/universalmotif
@@ -25,6 +25,7 @@ VignetteBuilder: knitr
 biocViews: MotifAnnotation, MotifDiscovery, DataImport, GeneRegulation
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
+Language: en-GB
 Collate: 
     'RcppExports.R'
     'add_multifreq.R'
