@@ -20,7 +20,7 @@ Import motifs created from \code{\link[=write_motifs]{write_motifs()}}. For opti
 \code{universalmotif} class motifs, consider using \code{\link[=saveRDS]{saveRDS()}} and
 \code{\link[=readRDS]{readRDS()}}. The \code{universalmotif} format will not be documented,
 as realistically the need to generate these manually/elsewhere should
-be nonexistent.
+be non-existent.
 }
 \seealso{
 Other read_motifs: \code{\link{read_cisbp}},
