@@ -48,7 +48,7 @@ topic.
 
 If \code{method = 'linear'}, then the input sequences are split linearly
 every \code{k} letters; for example, for \code{k = 3} 'ACAGATAGACCC' becomes
-'ACA GAT AGA CCC'; afterwhich these \code{3}-lets are shuffled randomly. If
+'ACA GAT AGA CCC'; after which these \code{3}-lets are shuffled randomly. If
 \code{method = 'random'}, then \code{k}-lets are picked from the sequence
 completely randomly. This however can leave 'leftover' letters, where
 lone letter islands smaller than \code{k} are left. There are a few options
