@@ -18,6 +18,9 @@ MINOR CHANGES
 
     o Increased input security for character type parameters throughout
 
+    o Fixed various spelling mistakes throughout and added Language field to
+      Description
+
 CHANGES IN VERSION 1.0.14
 -------------------------
 
